# Password-Strength-Checker

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: common_passwords.txt
docs/: aes-gcm.html  base64.html  generator.html  hash.html  index.html  pbkdf2.html
docs/assets/: app.js  common_passwords.txt  styles.css  words_en.txt  words_es.txt  words_fr.txt
docs/assets/modules/: analyzer.js  crypto.js  format.js  generator.js
src/: analyzer.py  breach.py  cli.py  entropy.py  patterns.py  reuse.py
tests/: test_analyzer_breach.py  test_breach.py  test_entropy.py  test_fuzz.py  test_patterns.py  test_reuse.py
web_tests/: index.test.mjs  test_analyzer.mjs  test_crypto.mjs  test_generator.mjs
