[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "password-strength-checker"
version = "0.1.0"
description = "A local password analysis tool with a web UI and CLI."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
password-strength-checker = "src.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.setuptools.package-data]
src = ["data/common_passwords.txt"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false
